# os-memory-management-simulator

./: .gitignore  CMakeLists.txt  QUICKSTART.md  TESTING_SUMMARY.md  build_and_test.bat  build_and_test.ps1
docs/: CACHE_STATISTICS.md  CLI_TESTS.md  DESIGN_DOCUMENT.MD  INTEGRATION.md  Memory_Management_System_Design_Document.docx  README.md  USAGE.md  implemented.txt
include/allocator/: IAllocator.h  PhysicalMemory.h
include/buddy/: BuddyAllocator.h
include/cache/: CacheHierarchy.h  DirectMappedCache.h
include/virtual_memory/: PageTable.h  VirtualAddress.h  VirtualMemoryManager.h
src/: main.cpp
src/allocator/: PhysicalMemory.cpp
src/buddy/: BuddyAllocator.cpp
src/cache/: CacheHierarchy.cpp  DirectMappedCache.cpp
src/virtual_memory/: PageTable.cpp  VirtualAddress.cpp  VirtualMemoryManager.cpp
test_artifacts/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md
test_artifacts/expected_outputs/: buddy_allocator_expected.txt  cache_access_expected.txt  memory_allocation_expected.txt  virtual_memory_expected.txt
test_artifacts/scripts/: run_all_tests.bat  run_all_tests.ps1  validate_test_output.py
test_artifacts/workloads/: buddy_allocator_stress.txt  cache_access_patterns.txt  memory_allocation_sequential.txt  virtual_memory_fifo.txt
test_inputs/: test_bestfit.txt  test_cache_detailed.txt  test_cache_l2_hits.txt  test_cli.txt  test_comprehensive.txt  test_full_demo.txt  test_input_buddy.txt  test_input_firstfit.txt  test_integration.txt  test_page_fault.txt  test_simple_cache.txt  test_small_memory.txt  test_worstfit.txt
tests/: README.md  test_buddy_allocator.cpp  test_cache.cpp  test_cli.cpp  test_page_table.cpp  test_physical_memory.cpp  test_runner.cpp  test_virtual_address.cpp  test_virtual_memory.cpp
